--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-todo></app-todo>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Angular 8 Todo App</h1>
+        <p class="lead">A sample todo app built in Angular 8</p>
+    </div>
+</div>
+    <router-outlet></router-outlet>
