--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,15 +1,3 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Angular 8 Todo App</h1>
-    <p class="lead">A sample todo app built in Angular 8</p>
-  </div>
-</div>
-
-
-
-
-
-
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-8 align-self-center">
@@ -17,28 +5,26 @@
     </div>
     <div class="col-2">
       <button class="btn btn-sm btn-primary btn-block" (click)="onAddTodoText()">Add</button>
-      
     </div>
     <div class="col-2">
-    <button class="btn btn-sm btn-primary btn-block" (click)="onClearTodoText()">Clear</button>
+      <button class="btn btn-sm btn-primary btn-block" (click)="onClearTodoText()">Clear</button>
     </div>
   </div>
-  
   <hr>
-
-
   <div class="row">
     <div class="col">
       <div *ngIf="isTodoListEmpty">
         <p>List is empty!</p>
       </div>
       <div class="list-group" *ngIf="!isTodoListEmpty">
-        <a href="#" class="list-group-item list-group-item-action" *ngFor="let todo of todoList">
+        <div class="list-group-item list-group-item-action" *ngFor="let todo of todoList">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1" [ngClass]="todo.isCompleted ? 'strike':''">{{todo.text}}</h5>
             <button class="btn btn-sm btn-primary" (click)="onCompletingTask(todo.todoId)">{{todo.buttonText}}</button>
           </div>
-        </a>
+        </div>
       </div>
     </div>
+    
   </div>
+ </div>
